--- a/index.html
+++ b/index.html
@@ -1,17 +1,17 @@
 <html>
     <body>
         <div id="app"></div>
-        <script>
+
+        <script src="https://unpkg.com/react@17/umd/react.development.js"></script>
+        <script src="https://unpkg.com/react-dom@17/umd/react-dom.development.js"></script>
+
+        <!-- Babel 스크립트 -->
+        <script src="https://unpkg.com/@babel/standalone/babel.min.js"></script>
+
+        <!-- type='text/jsx' -->
+        <script type="text/babel"> 
             const app = document.getElementById('app');
-            
-            const header = document.createElement('h1');
-            
-            const txt = 'hello world';
-            const hContent = document.createTextNode(txt);
-
-            header.appendChild(hContent);
-
-            app.appendChild(header);
+            ReactDOM.render(<h1>Hello World</h1>, app);        
         </script>
     </body>
 </html>
